fix bug: .view-main #menu-back.root is visible

--- a/assets/app.css
+++ b/assets/app.css
@@ -546,6 +546,12 @@ button {
     display: none;
   }
 }
+@media (orientation: landscape) {
+  .view-main #menu-back.root {
+    visibility: hidden;
+  }
+
+}
 
 #control {
   padding: 0 10px;
